--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -42,12 +42,13 @@ The `method` attribute is assigned a `HTTP` verb that is included in the `HTTP` 
 If we want to create an input field in our `<form>`, we’ll need the help of the `<input>` element.
 #### 1. Type Attribute
 When we create an `<input>` element with:
-1. `type="text"`, it renders a text field that users can type into. Note that the **default** value of type is `"text"`. An `<input type ="password">` element will replace input text with another character like an asterisk (`*`) or a dot (`•`).
-2. `type="number"` for an <input> we can restrict what users type into the input field to just numbers (and a few special characters like `-`, `+`, and `.`). We can also provide a `step` attribute which creates arrows inside the input field to increase or decrease by the value of the step attribute.
-3. `type="range"` to set the minimum and maximum values of the slider we assign values to the `min` and `max` attribute of the `<input>`. We could also control how smooth and fluid the slider works by assigning the `step` attribute a value.
-4. `type="checkbox"` if we presented multiple options to users and allowed them to select any number of options.
-5. `type="radio"` if we want to present multiple options and only allow for one selection.
-6. `type="submit"` to make a submit button in a `<form>`, we’re going to use the reliable `<input>` element.
+1. `type="text"`, it renders a text field that users can type into. Note that the **default** value of type is `"text"`.
+2. `type ="password"` element will replace input text with another character like an asterisk (`*`) or a dot (`•`).
+3. `type="number"` for an <input> we can restrict what users type into the input field to just numbers (and a few special characters like `-`, `+`, and `.`). We can also provide a `step` attribute which creates arrows inside the input field to increase or decrease by the value of the step attribute.
+4. `type="range"` to set the minimum and maximum values of the slider we assign values to the `min` and `max` attribute of the `<input>`. We could also control how smooth and fluid the slider works by assigning the `step` attribute a value.
+5. `type="checkbox"` if we presented multiple options to users and allowed them to select any number of options.
+6. `type="radio"` if we want to present multiple options and only allow for one selection.
+7. `type="submit"` to make a submit button in a `<form>`, we’re going to use the reliable `<input>` element.
 
 #### 2. Name Attribute
 It’s also important that we include a `name` attribute for the `<input>` — without the name attribute, information in the `<input>` won’t be sent when the `<form>` is submitted.
@@ -81,8 +82,49 @@ While `<select>` and `<datalist>` share some similarities, there are some major 
       <textarea id="blog" name="blog" rows="5" cols="30">
       </textarea>
     </form>
+    
 The `<textarea>` element is used to create a bigger text field for users to write more text. We can add the attributes `rows` and `cols` to determine the amount of rows and columns for the `<textarea>`.
 
 ### Submit Form Element
     <input type="submit" value="Submit">
 To make a submit button in a `<form>`, we’re going to use the reliable `<input>` element and set the `type` to `"submit"`.
+
+
+## Form Validation
+### How it works
+Shared among the different browsers are the benefits of using HTML5’s built-in client-side validation. It saves us time from having to send information to the server and wait for the server to send back confirmation or rejection of the data. This can also help us protect our server from malicious code or data from a malicious user. It also allows us to quickly give feedback to users for specific fields rather than having them fill in a form again if the data they input into the form was rejected.
+### 1. Requiring an Input of Needed Validation Variables
+    <form action="/example.html" method="POST">
+        <label for="username">Enter your username</label>
+        <input id="username" name="username" type="text" required>
+        <br>
+        <label for="user-password">Enter your password</label>
+        <input id="user-password" name="user-password" type="password" required>
+    </form>
+Sometimes we have fields in our `<form>`s which are not optional, i.e. there must be information provided before we can submit it. To enforce this rule, we can add the `required` attribute to an `<input>` element.
+### 2. Setting Minimum and Maximum Value for a 'type="range"' or a 'type="number"' Input Element
+    <form action="/example.html" method="POST">
+      <label for="guests">Enter # of guests:</label>
+      <input id="guests" name="guests" type="number" min="1" max="4">
+      <input type="submit" value="Submit">
+    </form>
+![image](https://github.com/user-attachments/assets/a9012008-dd4c-4058-83cd-10836b2ec2a8)
+
+If a user tries to submit an input that is less than 1 a warning will appear:prompt on a number field for user to input a value greater than or equal to 1. A similar message will appear if a user tries to input a number greater than 4. Let’s now see this action.
+
+### 3. Checking Text Length
+    <form action="/example.html" method="POST">
+      <label for="summary">Summarize your feelings in less than 250 characters</label>
+      <input id="summary" name="summary" type="text" minlength="5" maxlength="250" required>
+      <input type="submit" value="Submit">
+    </form>
+To set a minimum number of characters for a text field, we add the `minlength` attribute and a value to set a minimum value. Similarly, to set the maximum number of characters for a text field, we use the `maxlength` attribute and set a maximum value.
+
+### 4. Matching a Pattern
+    <form action="/example.html" method="POST">
+      <label for="payment">Credit Card Number (no spaces):</label>
+      <br>
+      <input id="payment" name="payment" type="text" required pattern="[0-9]{14,16}">
+      <input type="submit" value="Submit">
+    </form>
+In addition to checking the length of a text, we could also add a validation to check how the text was provided. For cases when we want user input to follow specific guidelines, we use the pattern attribute and assign it a regular expression, or regex. Let’s say we wanted to check for a valid credit card number (a 14 to 16 digit number). We could use the regex: `[0-9]{14,16}` which checks that the user provided only numbers and that they entered at least 14 digits and at most 16 digits.
