--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -61,7 +61,7 @@ For a user to properly identify an `<input>` element or others, we use the appro
 ### Dropdown List Element
 A dropdown list to allows our users to choose one option from an organized list by using:
 * `<select>` element with `id` and `name` for the list.
-* `<option">` element with `value` attribute for each option in the dropdown list.
+* `<option>` element with `value` attribute for each option in the dropdown list.
 
 ### Datalist Element
     <section class="sauce-selection">
