--- a/HTML/5. SEMANTIC HTML.md
+++ b/HTML/5. SEMANTIC HTML.md
@@ -1,1 +1,110 @@
+### Semantic HTML
+![image](https://github.com/user-attachments/assets/797cbab8-0026-4cb5-9126-37ed529f6bc1)
+
+The word semantic means “relating to meaning,” so semantic elements provide information about the content between the opening and closing tags.
+
+#### Why use Semantic HTML?
+* **Accessibility**: Semantic HTML makes webpages accessible for mobile devices and for people with disabilities as well. This is because screen readers and browsers are able to interpret the code better.
+* **SEO**: It improves the website SEO, or Search Engine Optimization, which is the process of increasing the number of people that visit your webpage. With better SEO, search engines are better able to identify the content of your website and weight the most important content appropriately.
+* **Easy to Understand**: Semantic HTML also makes the website’s source code easier to read for other web developers.
+
+### Semantic Elements in HTML:
+
+#### 1. Header Element
+A `<header>` is a container usually for either navigational links or introductory content containing <h1> to <h6> headings.
+
+#### 2. Navigation Links Element
+A `<nav>` is used to define a block of navigation links such as menus and tables of contents. It is important to note that `<nav>` can be used inside of the `<header>` element but can also be used on its own.
+
+#### 3. Main Element
+    <main>
+      <header>
+        <h1>Types of Sports</h1>
+      </header>
+      <article>
+        <h3>Baseball</h3>
+        <p>
+          The first game of baseball was played in Cooperstown, New York in the summer of 1839.
+        </p>
+      </article>
+    </main>
+The element `<main>` is used to encapsulate the dominant content within a webpage.
+
+#### 4. Footer Element
+    <footer>
+      <p>Email me at Codey@Codecademy.com</p>
+    </footer>
+The content at the bottom of the subject information is known as the footer, indicated by the `<footer>` element.
+The footer contains information such as:
+* Contact information
+* Copyright information
+* Terms of use
+* Site Map
+* Reference to top of page links
+
+#### 5. Section Element
+    <section>
+      <h2>Fun Facts About Cricket</h2>
+      <article>
+        <p>A single match of cricket can last up to 5 days.</p>
+      </article>
+    </section>
+`<section>` defines elements in a document, such as chapters, headings, or any other area of the document with the same theme. **For example**:
+
+Content with the same theme such as articles about cricket can go under a single `<section>`.
+
+A website’s home page could be split into sections for the introduction, news items, and contact information.
+
+#### 6. Article Element
+The `<article>` element holds content that makes sense on its own. `<article>` can hold content such as articles, blogs, comments, magazines, etc. An `<article>` tag would help someone using a screen reader understand where the article content (that might contain a combination of text, images, audio, etc.) begins and ends.
+
+#### 7. Aside Element
+    <article>
+      <p>The first World Series was played between Pittsburgh and Boston in 1903 and was a nine-game series.</p>
+    </article>
+    <aside>
+      <p>
+       Babe Ruth once stated, “Heroes get remembered, but legends never die.” 
+      </p>
+    </aside>
+
+The `<aside>` element is used to mark additional information that can enhance another element but isn’t required in order to understand the main content. Some common uses of the <aside> element are for:
+* Bibliographies
+* Endnotes
+* Comments
+* Pull quotes
+* Editorial sidebars
+* Additional information
+
+#### 8. Figure Element
+    <figure>
+      <img src="overwatch.jpg">
+      <figcaption>This picture shows characters from Overwatch.</figcaption>
+    </figure>
+
+`<figure>` is an element used to encapsulate media such as an image, illustration, diagram, code snippet, etc, which is referenced in the main flow of the document. While the content in `<figure>` is related to the main flow of the document, its position is independent. This means that you can remove it or move it somewhere else without affecting the flow of the document.
+
+#### 9. Figcaption Element
+Adding a `<figcaption>` into the `<figure>` element describes the figure presented.
+
+#### 10. Audio Element
+    <audio autoplay controls>
+      <source src="iAmAnAudioFile.mp3" type="audio/mp3">
+    </audio>
+
+The `<audio>` element is used to embed audio content into a document. Like `<video>`, `<audio>` uses `src` to link the audio source. Attributes allow us to do many different things to our audio file. There are many attributes for `<audio>` but today we’re going to be focusing on `controls` and `src`:
+* `controls`: automatically displays the audio controls into the browser such as play and mute.
+* `src`: specifies the URL of the audio file.
+
+#### 11. Video Element
+The `<video>` element makes it clear that a developer is attempting to display a video to the user. Some attributes that can alter a video playback include:
+* `controls`: When added in, a play/pause button will be added onto the video along with volume control and a fullscreen option.
+* `autoplay`: The attribute which results in a video automatically playing as soon as the page is loaded.
+* `loop`: This attribute results in the video continuously playing on repeat.
+
+#### 12. Embed Element
+    <embed src="download.gif"/>
+The websites that have an `embed` button have some form of media content that can be added to other websites. The `<embed>` tag is a self-closing tag, unlike the `<video>` element.
+##### #Note that `<embed>` is a deprecated tag and other alternatives, such as `<video>`, `<audio>` and `<img>`, should be used in its place, but is being taught for legacy purposes.
+
 
