Update 1. Introduction to JavaScript.md

--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -6,3 +6,21 @@
 5. Control Multimedia (Audio, Video, ... etc.)
 6. Create Web Browser Games
 7. Create Mobile Applications
+
+### Steps for Writing a JavaScript Code:
+1. Open Browser (Google Chrome Recommended)
+2. Right Click
+3. Inspect
+4. Sources
+5. Snippets
+6. New Snippet and Rename it "chosen_name.js"
+7. Write the JavaScript Code
+
+# Commands in JavaScript
+## 1. Printing
+    alert("String")
+## 2. Creating New Variables
+    let var = "value"
+## 3. If Conditional
+    if (var == "value) alert('var value is right')
+##  
