--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -1,4 +1,8 @@
-`JavaScript` is a scripting (working on the server side - backend) and programming (working on the client side - frontend) language. It help in implementing complex features on a web page by making it interactive. `JavaScript` can:
+### Core Parts of Web Development
+![image](https://github.com/user-attachments/assets/c3aebeac-a43a-4bd2-bc7c-272c3f1de891)
+
+
+`JavaScript` is a scripting (working on the server side - backend) and programming (working on the client side - frontend) language. It help in implementing complex features on a web page by making it interactive. It is simply a high-level, object-oriented, multi-paradigm programming language. `JavaScript` can:
 1. Dynamically Update Content
 2. Manipulating `HTML` and `CSS`
 3. Animate Images, Content, and Create Image Gallery
@@ -7,20 +11,54 @@
 6. Create Web Browser Games
 7. Create Mobile Applications
 
-### Steps for Writing a JavaScript Code:
+### Steps for Using Browser's Developer Tools:
 1. Open Browser (Google Chrome Recommended)
 2. Right Click
 3. Inspect
+
+Instead of 2&3 we can use ("ctrl" + "shift" + "J")
+
 4. Sources
 5. Snippets
 6. New Snippet and Rename it "chosen_name.js"
 7. Write the JavaScript Code
 
+# Coding Scripts
+1. Create a `JavaScript` script ---> `script.js`
+2. Create a website using `HTML` ---> `index.html`
+3. Access the script in the `HTML` code using `<script src="script.js">`
+#####
+    <body>
+        <h1> This is my first JavaScript Project ZeroToOne</h1>
+        <script src="script.js"></script>
+    </body>
+
 # Commands in JavaScript
-## 1. Printing
+## 1. Printing in a Pop-Up
     alert("String")
-## 2. Creating New Variables
+## 2. Declaring New Variables
     let var = "value"
+
+![image](https://github.com/user-attachments/assets/6c590805-8a4e-4163-a355-920983acf18c)
+
+### A. Primitive Data Types
+The most important primitive data types are the first three. `JavaScript` has dynamic typing (we donot manually define the type of a variable, it is done automatically by the language).
+#### I. Numbers
+Used for decimals and integers `let age=30`.
+#### II. String
+Used for a sequence of characters `let fullname = "Ahmed Waleed Aldesouky"`.
+#### III. Boolean
+Used for taking decisions by storing logical type that can only be `true` or `false`.
+#### IV. Undefined
+Value taken by a variable that is not assigned to a variable.
+#### V. Null
+Also means "absence of values".
+#### VI. Symbol
+Value that is unique and cannot be changed.
+#### VII. BigInt
+Larger integers that the `Number` type can hold.
+
 ## 3. If Conditional
     if (var == "value) alert('var value is right')
-##  
+## 4. Loging Text or String Out in the Console
+    console.log("String")
