--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -24,9 +24,9 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
 7. Write the JavaScript Code
 
 # Coding Scripts
-1. Create a `JavaScript` script ---> `script.js`
-2. Create a website using `HTML` ---> `index.html`
-3. Access the script in the `HTML` code using `<script src="script.js">`
+1. Create a `JavaScript` script ---> `script.js`.
+2. Create a website using `HTML` ---> `index.html`.
+3. Access the script in the `HTML` code using `<script>` tag and the `src` attribute.
 #####
     <body>
         <h1> This is my first JavaScript Project ZeroToOne</h1>
@@ -34,6 +34,10 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
     </body>
 
 # Commands in JavaScript
+In JavaScript, semicolons (`;`) are not strictly required at the end of every line of code. However, semicolons are highly recommended for the following reasons:
+* **Clarity and Consistency**: Explicitly adding semicolons makes your code easier to read and maintain, especially for others or for your future self. It avoids ambiguity and ensures consistent interpretation.
+* **Automatic Semicolon Insertion (ASI)**: While ASI can insert semicolons in some cases, it's not foolproof. It might not work as expected in complex or minified code, leading to unexpected errors.
+
 ## 1. Printing in a Pop-Up
     alert("String")
 ## 2. Declaring New Variables
@@ -42,7 +46,7 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
 ![image](https://github.com/user-attachments/assets/6c590805-8a4e-4163-a355-920983acf18c)
 
 ### A. Primitive Data Types
-The most important primitive data types are the first three. `JavaScript` has dynamic typing (we donot manually define the type of a variable, it is done automatically by the language).
+The most important primitive data types are the first three. `JavaScript` has dynamic typing (we donot manually define the type of a variable, it is done automatically by the language). A variable can be defined with a data type, and then reassigned with new data of a different data type.
 #### I. Numbers
 Used for decimals and integers `let age=30`.
 #### II. String
@@ -62,3 +66,14 @@ Larger integers that the `Number` type can hold.
     if (var == "value) alert('var value is right')
 ## 4. Loging Text or String Out in the Console
     console.log("String")
+## 5. Get the Data Type
+    console.log(typeof "data");
+    console.log(typeof 2.0);
+    console.log(typeof true);
+## 6. Defining a Function
+    function satMyName(){
+        alert("Name");
+    }
+## 7. Declaring a Constant
+    const myBrithYear = 2002
+Constants are memory places that can be assigned only to one value without getting changed in the rest of the code. Besides, constants can't be left undefined.
