--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -41,7 +41,8 @@ In JavaScript, semicolons (`;`) are not strictly required at the end of every li
 ## 1. Printing in a Pop-Up
     alert("String")
 ## 2. Declaring New Variables
-    let var = "value"
+    let newVariable1 = "value1"    // mutable
+    var newVariable2 = "value2"    // mutable, but function scoped
 
 ![image](https://github.com/user-attachments/assets/6c590805-8a4e-4163-a355-920983acf18c)
 
@@ -75,5 +76,30 @@ Larger integers that the `Number` type can hold.
         alert("Name");
     }
 ## 7. Declaring a Constant
-    const myBrithYear = 2002
+    const myBrithYear = 2002    // immutable
 Constants are memory places that can be assigned only to one value without getting changed in the rest of the code. Besides, constants can't be left undefined.
+
+## 8. Operators
+* Arithmatic Operators (`-`, `+`, `/`, `*` and `**`)
+* Assignment Operator (`=`, `++`, `--`, `+=`, `-=`, `/=` and `*=`)
+* Comparison Operators (`==`, `!=`, `===`, `!==`, `>`, `<`, `<=` and `>=`)
+####
+    1 == '1'     // true (equality checks the equal values)
+    1 != '1'     // false
+    1 === '1'    // false (strict equality checks the values and the types)
+    1 !== '1'    // true
+
+## 9. Joining Strings
+    console.log("Ahmed" + " " + "Waleed")
+
+## 10. Percedence in Arithmatic Operations
+1. Grouping (Parentheses `()`)
+2. Exponentiation (`**`)
+3. Multiplication (`*`) and Division (`/`)
+4. Addition (`+`) and Subtraction (`-`)
+5. Comparison Operators (`<`, `>`, `<=`, `>=`, `==`, `!=`, `===`, `!==`)
+6. Logical AND (`&&`)
+7. Logical OR (`||`)
+8. Assignment Operators (`=`, `+=`, `-=`, `*=`, `/=`, etc.)
+9. Member Access (`.`), `[]`)
+10. Increment/Decrement (`++`, `--`)
