Writing on the Browser from an Internal Script Added

--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -69,3 +69,8 @@ The operations of
 8. Assignment Operators (`=`, `+=`, `-=`, `*=`, `/=`, etc.)
 9. Member Access (`.`), `[]`)
 10. Increment/Decrement (`++`, `--`)
+
+## 11. Writing on the Browser from an Internal Script
+    <script>
+        document.write("String <br/>")
+    </script>
