--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -70,7 +70,22 @@ The operations of
 9. Member Access (`.`), `[]`)
 10. Increment/Decrement (`++`, `--`)
 
-## 11. Writing on the Browser from an Internal Script
+## 11. Writing on the Browser
+### I. from an Internal Script
     <script>
-        document.write("String <br/>")
+        document.write("Internal Script <br/>")
     </script>
+### II. from an External Script
+    document.write("External Script <br
+and use the linking technique of adding the script in the `src` attribute.
+
+## 12. Comments
+#### 1. Single Line Comment 
+    // Comment
+#### 2. Multi-Line Comment
+    /*
+    Comment line 1
+    Comment line 2
+    */
+#### 3. HTML Code Comment
+    <!-- Comment -->
