Checking for Errors

--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -23,8 +23,8 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
 6. New Snippet and Rename it "chosen_name.js"
 7. Write the JavaScript Code
 
-# Coding Scripts
-### We can:
+### Coding Scripts
+#### We can:
 1. Create a `JavaScript` script ---> `script.js`.
 2. Create a website using `HTML` ---> `index.html`.
 3. Access the script in the `HTML` code using `<script>` tag and the `src` attribute.
@@ -35,3 +35,6 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
     </body>
 
 #### or we can simply write the javascript code in the `<script>` tag
+
+### Checking for Errors
+We can find errors in our code using the console from the browser used.
