Data Types Added

--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -36,5 +36,28 @@ Instead of 2&3 we can use ("ctrl" + "shift" + "J")
 
 #### or we can simply write the javascript code in the `<script>` tag
 
+## Data Types
+
+![image](https://github.com/user-attachments/assets/6c590805-8a4e-4163-a355-920983acf18c)
+
+### A. Primitive Data Types
+The most important primitive data types are the first three. `JavaScript` has dynamic typing (we donot manually define the type of a variable, it is done automatically by the language). A variable can be defined with a data type, and then reassigned with new data of a different data type.
+#### I. Numbers
+Used for decimals and integers `let age=30`.
+#### II. String
+Used for a sequence of characters `let fullname = "Ahmed Waleed Aldesouky"`.
+#### III. Boolean
+Used for taking decisions by storing logical type that can only be `true` or `false`.
+#### IV. Undefined
+Value taken by a variable that is not assigned to a variable.
+#### V. Null
+Also means "absence of values".
+#### VI. Symbol
+Value that is unique and cannot be changed.
+#### VII. BigInt
+Larger integers that the `Number` type can hold.
+
+### B. Composite Data (Objects)
+
 ### Checking for Errors
 We can find errors in our code using the console from the browser used.
