Update 2. Common Commands in JavaScript.md

--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -26,7 +26,7 @@ In JavaScript, semicolons (`;`) are not strictly required at the end of every li
 Constants are memory places that can be assigned only to one value without getting changed in the rest of the code. Besides, constants can't be left undefined.
 
 ## 8. Operators
-* Arithmatic Operators (`-`, `+`, `/`, `*` and `**`)
+* Arithmatic Operators (`-`, `+`, `/`, `*`, `%` and `**`)
 * Assignment Operator (`=`, `++`, `--`, `+=`, `-=`, `/=` and `*=`)
 * Comparison Operators (`==`, `!=`, `===`, `!==`, `>`, `<`, `<=` and `>=`)
 ####
@@ -36,20 +36,22 @@ Constants are memory places that can be assigned only to one value without getti
     1 !== '1'    // true
 
 ## 9. Joining Strings
-    console.log("Ahmed" + " " + "Waleed")
+    console.log("Ahmed" + " " + "Waleed")    // appends what comes after the plus sign at the end
+    console.log("My age is " + 22)           // appends "22" at the end as a string not a number
 
 ## 10. Precedence in Operations
 The operations of 
 1. Grouping (Parentheses `()`)
 2. Exponentiation (`**`)
 3. Multiplication (`*`) and Division (`/`)
-4. Addition (`+`) and Subtraction (`-`)
-5. Comparison Operators (`<`, `>`, `<=`, `>=`, `==`, `!=`, `===`, `!==`)
-6. Logical AND (`&&`)
-7. Logical OR (`||`)
-8. Assignment Operators (`=`, `+=`, `-=`, `*=`, `/=`, etc.)
-9. Member Access (`.`), `[]`)
-10. Increment/Decrement (`++`, `--`)
+4. Modulus (`%`)
+5. Addition (`+`) and Subtraction (`-`)
+6. Comparison Operators (`<`, `>`, `<=`, `>=`, `==`, `!=`, `===`, `!==`)
+7. Logical AND (`&&`)
+8. Logical OR (`||`)
+9. Assignment Operators (`=`, `+=`, `-=`, `*=`, `/=`, etc.)
+10. Member Access (`.`), `[]`)
+11. Increment/Decrement (`++`, `--`)
 
 ## 11. Writing on the Browser
 ### I. from an Internal Script
@@ -57,7 +59,7 @@ The operations of
         document.write("Internal Script <br/>")
     </script>
 ### II. from an External Script
-    document.write("External Script <br
+    document.write("External Script <br/>")
 and use the linking technique of adding the script in the `src` attribute.
 
 ## 12. Comments
