--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -61,3 +61,5 @@ Larger integers that the `Number` type can hold.
 
 ### Checking for Errors
 We can find errors in our code using the console from the browser used.
+
+#### `"ABC" - 123` will result in `NaN` (Not a Number)
