Confirm and Prompt pop-ups

--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -3,8 +3,18 @@ In JavaScript, semicolons (`;`) are not strictly required at the end of every li
 * **Clarity and Consistency**: Explicitly adding semicolons makes your code easier to read and maintain, especially for others or for your future self. It avoids ambiguity and ensures consistent interpretation.
 * **Automatic Semicolon Insertion (ASI)**: While ASI can insert semicolons in some cases, it's not foolproof. It might not work as expected in complex or minified code, leading to unexpected errors.
 
-## 1. Printing in a Pop-Up
+## 1. Pop-Up Boxes
+### I. Alert
     alert("String")
+A pop-up with one "Ok" button
+### II. Confirm
+    confirm("String")
+It sends two sonsecutive pop-ups; second one is for confirmation.
+### III. Prompt
+    var s = prompt("Enter your pin code")
+    document.write(s)
+Gives a space for user input.
+    
 ## 2. Declaring New Variables
     let newVariable1 = "value1"    // mutable
     var newVariable2 = "value2"    // mutable, but function scoped
