Comment in Prompt Pop-Up

--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -11,7 +11,7 @@ A pop-up with one "Ok" button
     confirm("String")
 It sends two sonsecutive pop-ups; second one is for confirmation.
 ### III. Prompt
-    var s = prompt("Enter your pin code")
+    var s = prompt("Enter your pin code")        // stores the input in the variable s
     document.write(s)
 Gives a space for user input.
     
