--- a/JavaScript/2. Common Commands in JavaScript.md
+++ b/JavaScript/2. Common Commands in JavaScript.md
@@ -73,12 +73,26 @@ The operations of
 and use the linking technique of adding the script in the `src` attribute.
 
 ## 12. Comments
-#### 1. Single Line Comment 
+#### I. Single Line Comment 
     // Comment
-#### 2. Multi-Line Comment
+#### II. Multi-Line Comment
     /*
     Comment line 1
     Comment line 2
     */
-#### 3. HTML Code Comment
+#### III. HTML Code Comment
     <!-- Comment -->
+
+## 13. Data Conversions
+### I. Number to String
+    let number = 42;
+    let numberString = number.toString();
+### II. String to Number
+    let decimalString = "3.14";
+    let decimalNumber = Number(decimalString);
+    ------------------------------------------------------------
+    let numberString = "123";
+    let number = parseInt(numberString);
+    ------------------------------------------------------------
+    let hexString = "FF";
+    let hexNumber = parseInt(hexString, 16);
