If conditionals added

--- a/JavaScript/3. Conditionals, Loops and Functions.md
+++ b/JavaScript/3. Conditionals, Loops and Functions.md
@@ -1,5 +1,19 @@
 # Conditionals
 ## 1. If Conditional
     if (var == "value){
-      alert('var value is right');
+        alert('var value is right');
+    }
+## 2. If ... else Conditional
+    if (var == "value"){
+        alert('var value is right');
+    } else {
+        alert('var value is wrong');
+    }
+## 3. If ... else if ... else ... Conditional
+    if (var1 == "value1"){
+        alert('var1 value1 is right');
+    } else if (var2 == "value2"){
+        alert('var2 value2 is right');
+    } else {
+        alert('var values are wrong');
     }
