--- a/JavaScript/3. Conditionals, Loops and Functions.md
+++ b/JavaScript/3. Conditionals, Loops and Functions.md
@@ -1,4 +1,4 @@
-# Conditionals
+# A. Conditionals
 ## 1. If Conditional
     if (var == "value){
         alert('var value is right');
@@ -17,3 +17,39 @@
     } else {
         alert('var values are wrong');
     }
+## 4. Switch ... Case Conditional
+    switch(var){
+        case var_value1:
+            alert("var_value1");
+            break;
+        case var_value2:
+            alert("var_value2");
+            break;
+        case var_value3:
+            alert("var_value3")
+            break;
+            :
+            :
+            :
+        default:
+            alert("No Match")
+
+# B. Loops
+## 1. for Loop
+    for (initialization; condition; increment or decrement){
+        // code to be repeated
+    }
+## 2. while Loop
+    while (condition) {
+        // code to be repeated
+    }
+## 3. do ... while
+    do{
+        // code to be executed at least once, then repeated if condition
+    } while (condition)
+## 4. break
+    break;
+It is put in a condition inside the loop to stop (break) the loop under this condition
+## 5. continue
+    continue;
+It is put in a condition inside the loop to skip the code underneath (continue for the next iteration) in the loop when this condition is satisfied
