--- a/JavaScript/4. Events Handling.md
+++ b/JavaScript/4. Events Handling.md
@@ -1,10 +1,31 @@
 Sometimes the events happen on the website due to server activities, while many time events happen due to user activity. Handling events gives the ability for creating dynamic websites
+
 ## 1. `onload` Event
-
 It is fired when the `HTML` document is loaded into the browser.
+
 ## 2. `onfocus` Event
-
 It is fired when the user focuses on paricular text field or any other HTML field.
-## 3. `onclick` Event
 
+## 3. `onclick` Event
 It is fired when a user clicks on a button.
+
+## 4. `onmouseover` Event
+    <html>
+    <head>
+    	<title>onmouseover/onmouseout</title>
+    	<script>
+     
+    	</script>
+    </head>
+    
+    <body>
+      <!-- marque scrolls text across the browser; stop() and start() are built-in functions -->
+    	<marquee onmouseover="stop()" onmouseout="start()">Start/Stop</marquee>
+    </body>
+    
+    </html>
+    
+It is triggered by the browser when the user places the mouse on a HTML element.
+
+## 5. `onmouseout` Event
+It is triggered by the browser when the user places the mouse from a HTML element.
