--- a/JavaScript/4. Events Handling.md
+++ b/JavaScript/4. Events Handling.md
@@ -1,15 +1,43 @@
-Sometimes the events happen on the website due to server activities, while many time events happen due to user activity. Handling events gives the ability for creating dynamic websites
+Sometimes the events happen on the website due to server activities, while many time events happen due to user activity. Handling events gives the ability for creating dynamic websites. Events are used in the HTML code as attributes to an HTML field, at the which the event is exepected to happen.
 
 ## 1. `onload` Event
 It is fired when the `HTML` document is loaded into the browser.
 
 ## 2. `onfocus` Event
+    <html>
+    <head>
+    	<title>onfocus/onblur</title>
+    	<script>
+    		function handleOnFocus(x){
+    			x.style.color = "red";
+    			x.style.backgroundColor="blue";
+    
+    
+    		}
+    		function handleOnBlur(x){
+    			x.style.color = "blue";
+    			x.style.backgroundColor="red";
+    		}
+    	
+    	</script>
+    </head>
+    
+    <body>
+    	<input type="text" onfocus="handleOnFocus(this)" onblur="handleOnBlur(this)"/>
+    	
+    </body>
+    
+    </html>
+
 It is fired when the user focuses on paricular text field or any other HTML field.
 
-## 3. `onclick` Event
+## 3. `onblur` Event
+It is fired when the user focuses away from a text field.
+
+## 4. `onclick` Event
 It is fired when a user clicks on a button.
 
-## 4. `onmouseover` Event
+## 5. `onmouseover` Event
     <html>
     <head>
     	<title>onmouseover/onmouseout</title>
@@ -27,5 +55,113 @@ It is fired when a user clicks on a button.
     
 It is triggered by the browser when the user places the mouse on a HTML element.
 
-## 5. `onmouseout` Event
+## 6. `onmouseout` Event
 It is triggered by the browser when the user places the mouse from a HTML element.
+
+## 7. `onmousedown` Event
+    <html>
+    <head>
+        <title>onmousedown/onmouseup using custom functions</title>
+        <script>
+        <!--Variables x and y are the HTML fields to be handled when event takes place-->
+        
+        function handleMouseDownEvent(x){
+            x.style.color = "red";
+            x.style.backgroundColor="yellow";
+            x.innerHTML = "MOUSEDOWN";
+    
+        }
+    
+        function handleMouseUpEvent(y){
+            y.style.color = "yellow";
+            y.style.backgroundColor="blue";
+            y.innerHTML = "MOUSEUP";
+    
+        }
+        
+        </script>
+    </head>
+    
+    <body>
+        <!--"this" is used to point to the current HTML element-->
+        <p onmousedown="handleMouseDownEvent(this)" onmouseup="handleMouseUpEvent(this)">Mouse Down/Mouse Up</p>
+    </body>
+    
+    </html>
+It is triggered when the user clicks the left mouse button.
+
+## 8. `onmouseup` Event
+It is fired when the user releases the left mouse button.
+
+## 9. `onclick` Event
+    <html>
+    <head>
+    	<title>onclick</title>
+    	<script>
+    		function calculate(a){
+    			var x = parseInt(document.calcform.num1.value);
+    			var y = parseInt(document.calcform.num2.value);
+    			var z = document.calcform.result;
+    			
+    
+    			if(a.value=="Add"){
+    				z.value = x+y;
+    
+    			}else if(a.value=="Sub"){
+    				z.value = x-y;
+    				
+    			}else if(a.value=="Mul"){
+    				z.value = x*y;
+    				
+    			}else if(a.value=="Div"){
+    				z.value = x/y;
+    				
+    			}else{
+    				z.value = x%y;
+    
+    			}
+    		}
+    	
+    	</script>
+    </head>
+    
+    <body>
+    	<form name="calcform">
+    		Number1: <input type="text" name="num1"/><br/>
+    		Number2: <input type="text" name="num2"/><br/>
+    		Result: <input type="text" name="result"/><br/>
+    		<input type="button" name="Add" value="Add" onclick="calculate(this)"/>
+    		<input type="button" name="Sub" value="Sub" onclick="calculate(this)"/>
+    		<input type="button" name="Mul" value="Mul" onclick="calculate(this)"/>
+    		<input type="button" name="Div" value="Div" onclick="calculate(this)"/>
+    		<input type="button" name="Mod" value="Mod" onclick="calculate(this)"/>
+    	</form>
+    	
+    </body>
+    
+    </html>
+It is simply `onmousedown` + `onmouseup` events combined.
+
+## 10. `onchange` Event
+    <html>
+    <head>
+    	<title>onchange</title>
+    	<script>
+    	function handleOnChangeEvent(x){
+    		window.location = x;
+    	}
+    	
+    	</script>
+    </head>
+    
+    <body>
+    	<select onchange="handleOnChangeEvent(this.value)">
+    		<option value="">Select a website</option>
+    		<option value="http://www.bharaththippireddy.com">Bharath Thippireddy</option>
+    		<option value="http://www.google.com">google</option>
+    	</select>
+    	
+    </body>
+    
+    </html>
+It is called when a change happens, usually used with HTML select box or combo box.
