--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -8,3 +8,26 @@
 	document.write("Dispaly In Bold:"+ s.bold()+"<br/>");
   	document.write("Replace:"+s.replace("Hello","My")+"<br/>");
   	document.write("Replace:"+s.replace("H","S"));
+
+String is a list of characters represented by either a double `" "` or a single `' '` quote-pair.
+
+### 1. `length` method
+Gets the length of a string
+
+### 2. `indexOf()` method
+Gets the index of which the character between the brackets is presented in the string.
+
+### 3. `lastIndexOf()` method
+Gets the last index of which the given character appears.
+
+### 4. `toLowerCase()` method
+Converts the whole string into lower case.
+
+### 5. `toUpperCase()` method
+Converts the whole string into upper case.
+
+### 6. `bold()` method
+Styles the whole string as bold.
+
+### 7. `replace()` method
+It takes two strings; such that the first replaces the second.
