--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -1,4 +1,4 @@
-## Strings
+# Strings
 	var s = "Hello World";
   	document.write("Length:"+ s.length+"<br/>");
   	document.write("index of o:"+ s.indexOf("o")+"<br/>");
@@ -31,3 +31,28 @@ Styles the whole string as bold.
 
 ### 7. `replace()` method
 It takes two strings; such that the first replaces the second.
+
+
+# Booleans
+	var b1 = new Boolean(0);
+	var b2 = new Boolean(null);
+	var b3 = new Boolean("");
+	var b4 = new Boolean(NaN);
+	var b5 = new Boolean(1);
+	var b6 = new Boolean("Hello");
+
+
+	document.write(b1+"<br/>");
+	document.write(b2+"<br/>");
+	document.write(b3+"<br/>");
+	document.write(b4+"<br/>");
+	document.write(b5+"<br/>");
+	document.write(b6+"<br/>");
+ 
+ Boolean values are only `true` and `false`. In the examples above:
+ 1. `0` ---> `false`
+ 2. `null` ---> `false`
+ 3. `NaN` ---> `false`
+ 4. `""` (empty strings) ---> `false`
+ 5. `1` ---> `true`
+ 6. `"Hello"` (non-empty strings) ---> `true`
