--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -56,3 +56,31 @@ It takes two strings; such that the first replaces the second.
  4. `""` (empty strings) ---> `false`
  5. `1` ---> `true`
  6. `"Hello"` (non-empty strings) ---> `true`
+
+
+# Math
+	document.write(Math.PI+"<br/>");
+	document.write(Math.sqrt(9)+"<br/>")
+	document.write(Math.pow(2,4)+"<br/>")
+	document.write(Math.floor(3.8)+"<br/>");
+	document.write(Math.ceil(3.2)+"<br/>");
+	document.write(Math.round(3.2)+"<br/>");
+	document.write(Math.round(3.6)+"<br/>");
+
+### 1. `PI` method
+Gets the constant value of `π`.
+
+### 2. `sqrt()` method
+Gets the square root of the given number.
+
+### 3. `pow()` method
+Takes two numbers; such that the first is the base and the second is the power.
+
+### 4. `floor()` method
+Gets the integer part of a number.
+
+### 5. `ceil()` method
+Rounds the number to the next integer number.
+
+### 6. `round()` method
+Rounds the number with `decimalPart ≥ 0.5` to the next integer number, otherwise it takes the integer part only.
