--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -84,3 +84,20 @@ Rounds the number to the next integer number.
 
 ### 6. `round()` method
 Rounds the number with `decimalPart ≥ 0.5` to the next integer number, otherwise it takes the integer part only.
+
+# Arrays
+	var a = new Array(2, 4.56, "Ahmed");
+	document.write(a + "<br/>")
+	document.write(a.length + "<br/>")
+	document.write(a[0] + " " + a[1] + " " + a[2] + "<br/>");
+#####
+	var b = [2,4.56,"Bharath"];
+	document.write("Array b: " + b + "<br/>");
+#####
+	var c = new Array();
+	c[0] = 2;
+	c[1] = 4.56;
+	c[2] = "Ahmed";
+	document.write("Array c: "+c);
+
+Arrays can hold different data types in a zero-base sequence (`0`, `1`, `2`, ... etc.), which has dynamic length (accessed by `length method`).
