--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -86,18 +86,39 @@ Rounds the number to the next integer number.
 Rounds the number with `decimalPart ≥ 0.5` to the next integer number, otherwise it takes the integer part only.
 
 # Arrays
+### 1. Creating new array, `length` method & accessing elements of the array
 	var a = new Array(2, 4.56, "Ahmed");
 	document.write(a + "<br/>")
 	document.write(a.length + "<br/>")
 	document.write(a[0] + " " + a[1] + " " + a[2] + "<br/>");
-#####
+### 2. Creating array and priniting it
 	var b = [2,4.56,"Bharath"];
 	document.write("Array b: " + b + "<br/>");
-#####
+### 3. Creating blank array and adding elements one by one
 	var c = new Array();
 	c[0] = 2;
 	c[1] = 4.56;
 	c[2] = "Ahmed";
 	document.write("Array c: "+c);
+ ### 4. Concatinating, Reversing and Joining Arrays
+ 	var a = new Array(2,4.56,"Bharath");		// new array
+	var b = [15,25];				// new array
+	var c = [20,30];				// new array
+
+	a = a.concat(b,19,29,c);
+	document.write(a+"<br/>");
+	document.write(a.reverse()+"<br/>");
+
+	document.write(a.join("-"));
+### 5. Deleting and Replacing elements in an array
+	var a = new Array(2,4.56,"Bharath");
+	document.write(a+"<br/>");
+	delete a[0];
+	document.write(a+"<br/>");
+	document.write(a[0]+"<br/>");
+
+	a[1] = 5.5; 
+	document.write(a+"<br/>");
+
 
 Arrays can hold different data types in a zero-base sequence (`0`, `1`, `2`, ... etc.), which has dynamic length (accessed by `length method`).
